@@ -138,6 +138,8 @@ module Padrino
     #   Padrino.mount_core(:app_file => "/path/to/file", :app_class => "Blog")
     #
     def mount_core(*args)
+      # TODO Remove this in 0.9.13 or before 1.0
+      warn "DEPRECATION! #{Padrino.first_caller}: Padrino.mount_core has been deprecated.\nUse Padrino.mount('AppName').to('/') instead"
       options = args.extract_options!
       app_class = args.size > 0 ? args.first.to_s.camelize : nil
       options.reverse_merge!(:app_class => app_class)
