@@ -8,7 +8,6 @@
 #
 # You can also map apps to a specified host:
 #
-#   Padrino.mount_core("Blog").host("blog.example.org")
 #   Padrino.mount("Admin").host("admin.example.org")
 #   Padrino.mount("WebSite").host(/.*\.?example.org/)
 #   Padrino.mount("Foo").to("/foo").host("bar.example.org")
@@ -16,11 +15,11 @@
 # Note 1: Mounted apps (by default) should be placed into the project root at '/app_name'.
 # Note 2: If you use the host matching remember to respect the order of the rules.
 #
-# By default, this file mounts the core app which was generated with this project.
-# However, the mounted core can be modified as needed:
+# By default, this file mounts the parimary app which was generated with this project.
+# However, the mounted app can be modified as needed:
 #
-#   Padrino.mount_core(:app_file => "/path/to/file", :app_class => "Blog")
+#   Padrino.mount(:app_file => "/path/to/file", :app_class => "Blog").to('/')
 #
 
 # Mounts the core application for this project
-Padrino.mount_core("<%= @app_name %>")
+Padrino.mount(<%= @app_name.inspect %>).to('/')
